--- a/babel.config.json
+++ b/babel.config.json
@@ -7,5 +7,8 @@
         "@babel/proposal-class-properties",
         "@babel/plugin-transform-typescript",
         "@babel/proposal-object-rest-spread"
-    ]
+    ],
+    "sourceMaps": true,
+    "compact": false,
+    "comments": true
 }
