--- a/package.json
+++ b/package.json
@@ -27,13 +27,17 @@
     "eslint-watch": "^7.0.0",
     "jest": "^26.6.3",
     "ts-jest": "^26.4.4",
+    "typedoc": "^0.19.2",
+    "typedoc-plugin-markdown": "^3.0.11",
     "typescript": "^4.1.2"
   },
   "scripts": {
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "esw": "esw . --ext .js,.jsx,.ts,.tsx --watch",
     "fmt": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
-    "build": "babel src/ --out-dir dist/ --extensions \".ts,.tsx\""
+    "build": "rm -rf dist && babel src/ --out-dir dist/ --extensions \".ts,.tsx\"",
+    "test": "jest ./test",
+    "doc": "typedoc --plugin typedoc-plugin-markdown --mode modules"
   },
   "eslintConfig": {
     "root": true,
