--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@typescript-eslint/eslint-plugin": "^4.8.2",
     "@typescript-eslint/parser": "^4.8.2",
     "babel-jest": "^26.6.3",
+    "coveralls": "^3.1.0",
     "eslint": "^7.14.0",
     "eslint-watch": "^7.0.0",
     "jest": "^26.6.3",
