--- a/babel.config.json
+++ b/babel.config.json
@@ -1,7 +1,14 @@
 {
     "presets": [
         "@babel/preset-typescript",
-        "@babel/env"
+        [
+            "@babel/preset-env",
+            {
+                "targets": {
+                    "node": true
+                }
+            }
+        ]
     ],
     "plugins": [
         "@babel/proposal-class-properties",
