Add code coverage

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,3 +24,14 @@ jobs:
     - run: yarn lint
     - run: yarn test
     - run: yarn tsc
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v1
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
+        file: coverage/clover.xml
+        directory: ./coverage/lcov-report/
+        flags: ${{ matrix.node-version }}
+        name: codecov-umbrella
+        fail_ci_if_error: true
+        path_to_write_report: ./coverage/codecov_report.txt
+        verbose: true
