--- a/tsconfig.prod.json
+++ b/tsconfig.prod.json
@@ -2,7 +2,8 @@
     "extends": "./tsconfig",
     "compilerOptions": {
         "emitDeclarationOnly": true,
-        "outDir": "dist"
+        "outDir": "dist",
+        "noEmit": false
     },
     "include": [
         "src/**/*"
